fix: Toggle divider CSS spacing issues

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -956,6 +956,10 @@
     width: 100%;
 }
 
+.ast-top-divider.customize-control-ast-toggle-control .ast-divider-title + .ast-togglecontrol-wrapper {
+    margin-top: 25px;
+}
+
 .ast-top-divider.customize-control-ast-color-group .ast-control-wrap {
     display: inline-flex;
     width: 100%;
@@ -1921,7 +1925,8 @@
 }
 
 .ast-top-divider.customize-control-ast-color .ast-control-wrap,
-.ast-top-divider.customize-control-ast-color-group .ast-divider-title + .ast-control-wrap {
+.ast-top-divider.customize-control-ast-color-group .ast-divider-title + .ast-control-wrap,
+.ast-top-divider.customize-control-ast-toggle-control .ast-divider-title + .ast-togglecontrol-wrapper {
     margin-top: 25px;
     display: inline-flex;
     width: 100%;
